# otus-cpp_sample

./: CMakeLists.txt
.github/workflows/: release.yml
lib/: CMakeLists.txt
src/: CMakeLists.txt
tests/boost_test/: CMakeLists.txt
tests/google_test/: CMakeLists.txt  google_test_version.cpp
